add_subdirectory(Eigen)
if(EIGEN_BUILD_DOC)
  add_subdirectory(doc EXCLUDE_FROM_ALL)
endif()
if(EIGEN_BUILD_TESTING)
  if(EIGEN_LEAVE_TEST_IN_ALL_TARGET)
    add_subdirectory(test) # CTest automatic test building relies on the "all" target.
  else()
    add_subdirectory(test EXCLUDE_FROM_ALL)
  endif()
endif()
